--- a/SuperAdmin/index.html
+++ b/SuperAdmin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Admin.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SuperAdmin-@Multi-Vendor_ECommerce</title>
+    <title>Super_Admin-@Multi-Vendor_ECommerce</title>
   </head>
   <body>
     <div id="root"></div>
