--- a/SuperAdmin/index.html
+++ b/SuperAdmin/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Admin.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Super_Admin-@Multi-Vendor_ECommerce</title>
+    <title>Admin-@Multi-Vendor_ECommerce</title>
   </head>
   <body>
     <div id="root"></div>
